# htmx-convex-rust

./: .gitignore  Cargo.toml  Justfile  README.md  build.rs  package.json  plan.md  pnpm-lock.yaml
convex/: player.ts  quiz.ts  schema.ts
convex/_generated/: api.d.ts
src/: convex_types.rs  main.rs
templates/: dashboard.html  dashboard_quiz_item.html  index.html  layout.html  quiz.html  quiz_complete.html  quiz_question.html
