[package]
name = "htmx-convex-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.9.0"
chrono = "0.4.39"
convex = "0.9.0"
convex-typegen = "0.2.0"
dotenvy = "0.15.7"
env_logger = "0.11.6"
lazy_static = "1.5.0"
log = "0.4.25"
rand = "0.9.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tera = "1.20.0"

[build-dependencies]
convex-typegen = "0.2.0"
